[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/level.gd" type="Script" id=1]
[ext_resource path="res://scenes/UI/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/units/player/player_ship.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/background_star_xl.png" type="Texture" id=4]
[ext_resource path="res://assets/images/background_star_l.png" type="Texture" id=5]
[ext_resource path="res://assets/images/background_star_m.png" type="Texture" id=6]
[ext_resource path="res://assets/images/background_star_s.png" type="Texture" id=7]
[ext_resource path="res://assets/images/background_star_xs.png" type="Texture" id=8]
[ext_resource path="res://assets/sounds/music.wav" type="AudioStream" id=9]

[node name="test_level" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="camera" type="Camera2D" parent="." index="0"]

z_index = 1
offset = Vector2( 512, 300 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="HUD" parent="camera" index="0" instance=ExtResource( 2 )]

[node name="player_ship" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 504.005, 545.424 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="2"]

layer = -1
offset = Vector2( 512, 300 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 512, 300 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, -10000 )
scroll_limit_end = Vector2( 1024, 600 )
scroll_ignore_camera_zoom = true
_sections_unfolded = [ "Scroll" ]

[node name="stars_xl" type="ParallaxLayer" parent="ParallaxBackground" index="0"]

motion_scale = Vector2( 1, 0.5 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 0, 0 )
_sections_unfolded = [ "Motion" ]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/stars_xl" index="0"]

position = Vector2( 0, -4700 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 10000 )
_sections_unfolded = [ "Region" ]

[node name="stars_l" type="ParallaxLayer" parent="ParallaxBackground" index="1"]

motion_scale = Vector2( 1, 0.6 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 0, 0 )
_sections_unfolded = [ "Motion" ]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/stars_l" index="0"]

position = Vector2( 0, -4700 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 10000 )

[node name="stars_m" type="ParallaxLayer" parent="ParallaxBackground" index="2"]

motion_scale = Vector2( 1, 0.75 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 0, 0 )
_sections_unfolded = [ "Motion" ]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/stars_m" index="0"]

position = Vector2( 0, -4700 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 10000 )

[node name="stars_s" type="ParallaxLayer" parent="ParallaxBackground" index="3"]

motion_scale = Vector2( 1, 0.85 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 0, 0 )
_sections_unfolded = [ "Motion" ]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/stars_s" index="0"]

position = Vector2( 0, -4700 )
texture = ExtResource( 7 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 10000 )

[node name="stars_xs" type="ParallaxLayer" parent="ParallaxBackground" index="4"]

motion_scale = Vector2( 1, 0.9 )
motion_offset = Vector2( 0, 0 )
motion_mirroring = Vector2( 0, 0 )
_sections_unfolded = [ "Motion" ]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/stars_xs" index="0"]

position = Vector2( 0, -4700 )
texture = ExtResource( 8 )
region_enabled = true
region_rect = Rect2( 0, 0, 1024, 10000 )

[node name="asteroid_timer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 0.78
one_shot = false
autostart = true

[node name="grunt_enemy_timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.7
one_shot = false
autostart = true

[node name="circle_enemy_timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="wavy_enemy_timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 0.8
one_shot = false
autostart = true

[node name="sneaky_enemy_timer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.2
one_shot = false
autostart = true

[node name="level_music" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 9 )
volume_db = -8.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[connection signal="score_change" from="." to="camera/HUD" method="_on_test_level_score_change"]

[connection signal="barrier_change" from="player_ship" to="camera/HUD" method="_on_player_ship_barrier_change"]

[connection signal="life_change" from="player_ship" to="camera/HUD" method="_on_player_ship_life_change"]

[connection signal="timeout" from="asteroid_timer" to="." method="_on_asteroid_timer_timeout"]

[connection signal="timeout" from="grunt_enemy_timer" to="." method="_on_grunt_enemy_timer_timeout"]

[connection signal="timeout" from="circle_enemy_timer" to="." method="_on_circle_enemy_timer_timeout"]

[connection signal="timeout" from="wavy_enemy_timer" to="." method="_on_wavy_enemy_timer_timeout"]

[connection signal="timeout" from="sneaky_enemy_timer" to="." method="_on_sneaky_enemy_timer_timeout"]


